#17 Generate workaround for terraform login-gitpod

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 PROJECT_ROOT='/workspace/terraform-beginner-bootcamp-2023'
+AWS_ACCESS_KEY_ID='AIDAVIERFDJGLHWHT644P'
+AWS_SECRET_ACCESS_KEY='MZGonKxFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY'
+AWS_DEFAULT_REGION='ap-south-2'
+TERRAFORM_CLOUD_TOKEN='ylp4xMZGonKxSyywwUd2VGQXDw.atlasv1.RQyznOH0pCLOUDTOKEN'
