--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,11 @@ tasks:
     before: |
       source ./bin/install_aws_cli
       source ./bin/set_tf_alias
+  - name: http-server
+    before: 
+      npm i -g http-server
+    command: 
+      http-server
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
